Getting close to launch

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
         <script type="text/javascript" src="js/swfaddress/swfaddress.js"></script>
         <script type="text/javascript">
             /* <![CDATA[ */
-				defaultColor = "FFFFFF";
+				defaultColor = "0x454240";
                 flashVars   = { xmlPath:"content/xml/site.xml", defaultBg:"0x" + defaultColor }; // Set the xml location here:
                 flashParams = { bgcolor: "#" + defaultColor, menu: 'false', allowfullscreen:"true" };
                 swfobject.embedSWF( 'DelorumSite.swf', 'flash_div', '100%', '100%', '9.0.45', 
