--- a/html/cufon_test/index.html
+++ b/html/cufon_test/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" 
    "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <script src="cufon-yui.js" type="text/javascript"></script>
-        <script src="Rosewood_Std_700.font.js" type="text/javascript"></script>
-        <script type="text/javascript">
-            Cufon.replace('h1');
-        </script>
-    </head>
-    <body>
-        <h1>This text will be shown in Rockwall.</h1>
-    </body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<script src="cufon.js" type="text/javascript"></script>
+		<script src="Rosewood_Std_700.font.js" type="text/javascript"></script>
+		<script type="text/javascript">
+			Cufon.replace('h1', 'Rosewood Std');
+		</script>
+	</head>
+	<body>
+		<h1 style="color:#163350">This text will be shown in Rosewood.</h1>
+		<p>(Selection doesn't work yet)</p>
+	</body>
 </html>
