--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
         
         <div id="flash_wrapper">
             <div id="flash_div" >
-                <p>In order to view this page you need Flash Player 9+ support. Click on the following link to download it.</p>
+                <p>Delorum is a design and development firm specializing branding. In order to view this page you need Flash Player 9+ support. Click on the following link to download it.</p>
                 <p>
                     <a href="http://www.adobe.com/go/getflashplayer">
                         <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player" />
